# detestable-me-rs

./: Cargo.toml  README.md
evilguys/: Cargo.toml
evilguys/src/: cipher.rs  sidekick.rs  supervillain.rs  test_common.rs
evilmgmt/: Cargo.toml
evilmgmt/src/: main.rs  routes.rs
src/: cipher.rs  gadget.rs  henchman.rs  lib.rs  sidekick.rs  supervillain.rs  test_common.rs
