[package]
name = "detestable-me"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "detestable-me"
path = "src/main.rs"
test = false

[lib]
name = "evil"
path = "src/lib.rs"

[dependencies]
rand = "0.9.2"
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["macros", "time", "rt"] }

[dev-dependencies]
assertables = "9.8.2"
test-context = "0.4.1"
