[package]
name = "evilguys"
version = "0.1.0"
edition = "2024"

[lib]
name = "evil"
path = "src/lib.rs"

[dependencies]
rand = "0.9.2"
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["macros", "time", "rt"] }

[dev-dependencies]
assert2 = "0.3.16"
assertables = "9.8.2"
mockall = "0.13.1"
mockall_double = "0.3.1"
test-context = "0.4.1"

[lints]
workspace = true
